# value-investing-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  main.py  mcp_server.py  pyproject.toml  pytest.ini
.cursor/rules/: commit.mdc  techstack.mdc
config/: env.py
features/alphavantage/: api.py
features/analysis/: model.py  prompts.py  workflow.py
features/evaluation/: kpi_calculation.py  model.py  value_evaluation.py
features/fundamental_data/: alphavantage_adapter.py  cache.py  model.py  processor.py
features/llm/: google_genai.py  llm.py
features/research/: firecrawl_adapter.py  model.py  pdf_agent.py
ir_markdown_debug/: Apple_Inc.md
tests/features/fundamental_data/: __init__.py  alphavantage_adapter_test.py
tools/: tools.py
ui/: __init__.py  cli.py
workflow/: model.py  prompts.py  workflow.py
